--- a/test_qemu/meson.build
+++ b/test_qemu/meson.build
@@ -22,3 +22,10 @@ hex = custom_target('demo.bin',
   command : [meson.get_external_property('objcopy'), '-O', 'binary','@INPUT@','@OUTPUT@'],
 )
 
+dump = custom_target('demo.dump',
+  capture          : true,
+  build_by_default: true,
+  input : exe,
+  output : 'demo.dump',
+  command : [meson.get_external_property('objdump'), '-D', '-S', '-t', '@INPUT@'],
+)
