--- a/test_gcc/meson.build
+++ b/test_gcc/meson.build
@@ -3,18 +3,7 @@ project('example', 'c')
 sources = []
 inc     = []
 
-subdir( 'driver' )
-
-add_project_arguments('-march=rv32imc', language: 'c')
-linker_script1 = join_paths(meson.current_source_dir(), 'ld/esp32c3.ld')
-linker_script2 = join_paths(meson.current_source_dir(), 'ld/common.ld')
-linker_script3 = join_paths(meson.current_source_dir(), 'ld/romfuncs.ld')
-
-add_project_link_arguments('-T', linker_script1 ,'-T', linker_script2 ,'-T', linker_script3 ,'-march=rv32imc', '--specs=nano.specs', '--specs=nosys.specs', '-nostartfiles', language: 'c')
-
-sources += files('main.c')
-sources += files('start.S')
-sources += files('vectors.S')
+subdir( 'test' )
 
 exe = executable('example', sources, include_directories:[inc])
 
@@ -25,3 +14,10 @@ hex = custom_target('demo.bin',
   command : [meson.get_external_property('objcopy'), '-O', 'binary','@INPUT@','@OUTPUT@'],
 )
 
+dump = custom_target('demo.dump',
+  capture          : true,
+  build_by_default: true,
+  input : exe,
+  output : 'demo.dump',
+  command : [meson.get_external_property('objdump'), '-D', '-S', '-t', '@INPUT@'],
+)
